fix z-index float menu

--- a/app/stylesheets/newtab.css
+++ b/app/stylesheets/newtab.css
@@ -131,6 +131,7 @@ body {
   bottom: 50px;
   border-radius: 30px;
   transition: opacity .3s ease-in-out;
+  z-index: 11;
 }
 
 #menuFloat:hover {
